--- a/EcardQuery/ApplicationInsights.config
+++ b/EcardQuery/ApplicationInsights.config
@@ -1,3 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ApplicationInsights xmlns = "http://schemas.microsoft.com/ApplicationInsights/2013/Settings">
+<ApplicationInsights xmlns="http://schemas.microsoft.com/ApplicationInsights/2013/Settings">
+  <!--此密钥适用于资源组“WindowsApps”中的 Application Insights 资源“EcardQuery”-->
+  <InstrumentationKey>e7b0a948-cc06-43ff-bd07-92c3d8b1100d</InstrumentationKey>
 </ApplicationInsights>
