--- a/EcardQuery/EcardQuery.csproj
+++ b/EcardQuery/EcardQuery.csproj
@@ -131,6 +131,9 @@
     <None Include="Service References\Application Insights\ConnectedService.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AboutPage.xaml.cs">
+      <DependentUpon>AboutPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
@@ -138,6 +141,12 @@
     <Compile Include="EcardWebsiteHelper.cs" />
     <Compile Include="HistoryInquiryPage.xaml.cs">
       <DependentUpon>HistoryInquiryPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Liscenses\LiscencePage_AppInsights.xaml.cs">
+      <DependentUpon>LiscencePage_AppInsights.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Liscenses\LiscensePage_DBCS.xaml.cs">
+      <DependentUpon>LiscensePage_DBCS.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -175,7 +184,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="AboutPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="HistoryInquiryPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Liscenses\LiscencePage_AppInsights.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Liscenses\LiscensePage_DBCS.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
