--- a/EcardQuery/project.json
+++ b/EcardQuery/project.json
@@ -3,7 +3,8 @@
     "Microsoft.ApplicationInsights": "1.2.3",
     "Microsoft.ApplicationInsights.PersistenceChannel": "1.2.3",
     "Microsoft.ApplicationInsights.WindowsApps": "1.1.1",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "Microsoft.Services.Store.SDK": "10.1610.31001"
   },
   "frameworks": {
     "uap10.0": {}
