--- a/EcardQuery.UWP/project.json
+++ b/EcardQuery.UWP/project.json
@@ -4,7 +4,8 @@
     "Microsoft.ApplicationInsights.PersistenceChannel": "1.2.3",
     "Microsoft.ApplicationInsights.WindowsApps": "1.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "Microsoft.Services.Store.SDK": "10.1610.31001"
+    "Microsoft.Services.Store.SDK": "10.1610.31001",
+    "Xamarin.Forms": "2.3.4.231"
   },
   "frameworks": {
     "uap10.0": {}
