--- a/EcardQuery.Android/Properties/AndroidManifest.xml
+++ b/EcardQuery.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="zhaobang.ecardquery" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="16" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="EcardQuery.Android.EcardQuery.Android" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+	<uses-sdk />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="@string/AppName" android:icon="@drawable/square44x44logo"></application>
+	<application android:label="EcardQuery.Android" android:icon="@drawable/Icon"></application>
 </manifest>
