--- a/EcardQuery.UWP/project.json
+++ b/EcardQuery.UWP/project.json
@@ -1,9 +1,8 @@
 ﻿{
   "dependencies": {
-    "Microsoft.ApplicationInsights": "1.2.3",
-    "Microsoft.ApplicationInsights.PersistenceChannel": "1.2.3",
-    "Microsoft.ApplicationInsights.WindowsApps": "1.1.1",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "Microsoft.Azure.Mobile.Analytics": "0.11.1",
+    "Microsoft.Azure.Mobile.Crashes": "0.11.1",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.3",
     "Microsoft.Services.Store.SDK": "10.1610.31001",
     "Xamarin.Forms": "2.3.4.247"
   },
