--- a/EcardQuery.iOS/Info.plist
+++ b/EcardQuery.iOS/Info.plist
@@ -46,6 +46,8 @@
 			<dict>
 				<key>NSExceptionRequiresForwardSecrecy</key>
 				<false/>
+				<key>NSExceptionMinimumTLSVersion</key>
+				<string>TLSv1.1</string>
 			</dict>
 		</dict>
 	</dict>
