--- a/EcardQuery.iOS/Info.plist
+++ b/EcardQuery.iOS/Info.plist
@@ -2,14 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleName</key>
-	<string>EcardQuery.iOS</string>
 	<key>CFBundleIdentifier</key>
 	<string>cn.taoyouh.ecardquery.ios</string>
-	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
-	<key>CFBundleVersion</key>
-	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>MinimumOSVersion</key>
@@ -47,9 +41,15 @@
 				<key>NSExceptionRequiresForwardSecrecy</key>
 				<false/>
 				<key>NSExceptionMinimumTLSVersion</key>
-				<string>TLSv1.1</string>
+				<string>TLSv1.0</string>
 			</dict>
 		</dict>
 	</dict>
+	<key>CFBundleName</key>
+	<string>校园卡查询</string>
+	<key>CFBundleShortVersionString</key>
+	<string>2.0.1</string>
+	<key>CFBundleVersion</key>
+	<string>2.0.1</string>
 </dict>
 </plist>
