改进登录逻辑：
唤醒应用时，若登录已过期则重新提示登录；
关闭应用时保存cookies，启动应用是恢复cookies。

--- a/EcardQuery.Android/packages.config
+++ b/EcardQuery.Android/packages.config
@@ -3,6 +3,7 @@
   <package id="Microsoft.Azure.Mobile" version="0.12.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Azure.Mobile.Analytics" version="0.12.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Azure.Mobile.Crashes" version="0.12.0" targetFramework="monoandroid71" />
+  <package id="Xam.Plugins.Settings" version="2.5.8" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid71" />
