--- a/EcardQuery.iOS/packages.config
+++ b/EcardQuery.iOS/packages.config
@@ -3,5 +3,6 @@
   <package id="Microsoft.Azure.Mobile" version="0.12.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Azure.Mobile.Analytics" version="0.12.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Azure.Mobile.Crashes" version="0.12.0" targetFramework="xamarinios10" />
+  <package id="Xam.Plugins.Settings" version="2.5.8" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="xamarinios10" />
 </packages>
