--- a/EcardQuery.UWP/project.json
+++ b/EcardQuery.UWP/project.json
@@ -4,6 +4,7 @@
     "Microsoft.Azure.Mobile.Crashes": "0.12.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.3",
     "Microsoft.Services.Store.SDK": "10.1610.31001",
+    "Newtonsoft.Json": "10.0.2",
     "Xamarin.Forms": "2.3.4.247"
   },
   "frameworks": {
